[gd_scene load_steps=7 format=2]

[ext_resource path="res://Screens/Splash.gd" type="Script" id=1]
[ext_resource path="res://Assets/Textures/wildjam_logo.png" type="Texture" id=2]
[ext_resource path="res://Assets/Fonts/font_credits.tres" type="DynamicFont" id=3]
[ext_resource path="res://Assets/Fonts/font_bebas_75.tres" type="DynamicFont" id=4]

[sub_resource type="Animation" id=1]
resource_name = "fade_in"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("WildjamLogo:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Credits:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "fade_out"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("WildjamLogo:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Credits:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="Splash" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_horizontal_guides_": [ 1502.51 ],
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0627451, 0.121569, 0.196078, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WildjamLogo" type="TextureRect" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -357.0
margin_top = -280.0
margin_right = 357.0
margin_bottom = 280.0
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="WildjamLogo"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -184.482
margin_top = 280.0
margin_right = -45.4816
margin_bottom = 351.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.117647, 0.2, 0.305882, 1 )
text = "#25"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Credits" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -379.793
margin_top = -112.968
margin_right = -105.793
margin_bottom = -83.9683
custom_fonts/font = ExtResource( 3 )
text = "a game by mbrlabs"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/fade_in = SubResource( 1 )
anims/fade_out = SubResource( 2 )

[node name="FadeInTimer" type="Timer" parent="."]
wait_time = 0.75
one_shot = true
autostart = true

[node name="FadeOutTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="LaunchTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="FadeInTimer" to="." method="_on_FadeInTimer_timeout"]
[connection signal="timeout" from="FadeOutTimer" to="." method="_on_FadeOutTimer_timeout"]
[connection signal="timeout" from="LaunchTimer" to="." method="_on_LaunchTimer_timeout"]
